samples/_failures_safe/1761184211_f96f99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b938194d.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_b938194d.c:157:13: error: expected declaration or statement at end of input
  157 |             printf("Node %d: unreachable\n", i);
      |             ^~~~~~
./samples/SAFE/__tmp_b938194d.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b938194d.c:157:13: error: expected declaration or statement at end of input
